# rcon-web

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.dev  Dockerfile.full  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  start.sh
.github/: renovate.json
.github/workflows/: cd.yml  docker-pr.yml  docker.yml  lint.yml  renovate.yml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: auth.rs  config.rs  crypto.rs  main.rs  models.rs  state.rs
backend/src/app/: cors.rs  mod.rs  router.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs  routes.rs  types.rs
backend/src/crypto/: aes.rs  chacha.rs  mod.rs
backend/src/handlers/: command.rs  connect.rs  disconnect.rs  mod.rs  routes.rs
backend/src/models/: request.rs  response.rs
backend/src/observability/: mod.rs
frontend/: .pnp.cjs  .yarnrc.yml  Dockerfile  biome.json  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.js
frontend/src/: config.ts  env.d.ts  main.ts  models.ts
frontend/src/app/: App.vue
frontend/src/assets/: theme.css
frontend/src/composables/: useAppStep.ts  useAuth.ts  useConnectionForm.ts  useFlashMessage.ts  useGlobalLoader.ts  useServerConnect.ts  useServerError.ts  useServerStatus.ts
frontend/src/handlers/: command.ts  connect.ts  disconnet.ts  index.ts  rcon.ts
frontend/src/lib/: EncryptedPasswordStorage.ts  api.ts  (+7 more)
nginx/: default.conf  nginx.conf.template  nginx.http.conf  nginx.https.conf
prod/: .env.example  README.md  docker-compose.yml
prod/nginx/: nginx.conf
prod/ngnix/: default.conf
(+41 files in other folders)
