[package]
name = "rcon-api"
version = "0.1.0"
edition = "2024"

[dependencies]
rcon={ version = "0.6", features = ["rt-tokio"]}
axum = "0.8.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15.7"
tower-http = {version = "0.6.2", features = ["trace"]}
jsonwebtoken = "9.3.1"
chrono = "0.4.40"
