[package]
name = "rcon-api"
version = "0.1.0"
edition = "2024"

[dependencies]
rcon={ version = "0.6", features = ["rt-tokio"]}
axum = "0.8.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15.7"
tower-http = {version = "0.6.2", features = ["trace"]}
jsonwebtoken = "9.3.1"
chrono = "0.4.40"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing = "0.1.41"
tower-layer = "0.3.3"
rand = "0.9.0"
aes-gcm = { version = "0.10", features = ["aes"] }
base64 = "0.22.1"

[[bin]]
name = "rcon-api"
path = "src/main.rs"


[profile.release]
strip = true      # Удаляет debug-символы
lto = true        # Link Time Optimization (ускоряет запуск)
codegen-units = 1 # Максимально агрессивная оптимизация
opt-level = "z"   # "z" для минимального размера, "s" — чуть больше, но быстрее
panic = "abort"